--- a/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
@@ -20,7 +20,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="fingerprick-test-person-1-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
-                Is {{ data['first-name-person-1' or 'Pete'] }} {{ data['last-name-person-1' or 'Smith'] }} OK doing a fingerprick blood test at home?
+                Is {{ data['first-name-person-1'] or 'Pete' }} {{ data['last-name-person-1'] or 'Smith' }} OK doing a fingerprick blood test at home?
               </h1>
             </legend>
             <span id="fingerprick-test-person-1-hint" class="govuk-body">
