--- a/app/views/antigen/v2/global-registration/email-address-person-1.html
+++ b/app/views/antigen/v2/global-registration/email-address-person-1.html
@@ -59,13 +59,13 @@
                  <label class="govuk-label" for="email-address-person-1">
                    Email address
                  </label>
-                 <input class="govuk-input govuk-!-width-two-thirds" id="email-address-person-1" name="email-address-person-1" type="tel" value="{{ data['email-address-person-1'] }}">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="email-address-person-1" name="email-address-person-1" type="text" value="{{ data['email-address-person-1'] }}">
                </div>
                <div class="govuk-form-group">
                  <label class="govuk-label" for="confirm-email-address-person-1">
                    Confirm email address
                  </label>
-                 <input class="govuk-input govuk-!-width-two-thirds" id="confirm-email-address-person-1" name="confirm-email-address-person-1" type="tel" value="{{ data['confirm-email-address-person-1'] }}">
+                 <input class="govuk-input govuk-!-width-two-thirds" id="confirm-email-address-person-1" name="confirm-email-address-person-1" type="text" value="{{ data['confirm-email-address-person-1'] }}">
                </div>
              </div>
             </div>
