--- a/app/views/international-arrivals/v1/confirm-payment.html
+++ b/app/views/international-arrivals/v1/confirm-payment.html
@@ -12,10 +12,18 @@
       <p class="govuk-body">An example payment description</p>
       <p class="govuk-body govuk-!-margin-bottom-1"><span>Total amount:</span></p>
       <p class="govuk-body govuk-!-font-size-36 govuk-!-margin-bottom-0">
-        {% if data['first-name-person-1'] %}
-        £420.00
+        {% if data['travel-route'] == "green" %}
+          {% if data['first-name-person-1'] %}
+          £210.00
+          {% else %}
+          £105.00
+          {% endif %}
         {% else %}
-        £210.00
+          {% if data['first-name-person-1'] %}
+          £420.00
+          {% else %}
+          £210.00
+          {% endif %}
         {% endif %}
       </p>
     </div>
