--- a/app/views/international-arrivals/v1/contact-details-person-1.html
+++ b/app/views/international-arrivals/v1/contact-details-person-1.html
@@ -38,8 +38,8 @@
 
             <div class="govuk-form-group govuk-!-margin-top-5 govuk-!-margin-bottom-4">
                 <label class="govuk-label govuk-!-margin-top-3" for="mobile-phone-number-person-1">
-                    <strong style="line-height: 1.7em;">What's your mobile number?</strong><br>
-                    Mobile phone number
+                    <!-- <strong style="line-height: 1.7em;">What's your mobile number?</strong><br> -->
+                    <strong>Mobile number</strong>
                 </label>
                 <input class="govuk-input govuk-!-width-one-third govuk-!-margin-top-2" id="mobile-phone-number-person-1" name="mobile-phone-number-person-1" type="tel" value="{{ data['mobile-phone-number-person-1'] }}">
             </div>
@@ -52,8 +52,8 @@
 
             <div class="govuk-form-group govuk-!-margin-top-6 govuk-!-margin-bottom-4">
                 <label class="govuk-label" for="email-address-person-1">
-                    <strong style="line-height: 1.7em;">What's your email address?</strong><br>
-                    Email address
+                    <!-- <strong style="line-height: 1.7em;">What's your email address?</strong><br> -->
+                   <strong>Email address</strong>
                 </label>
                 <input class="govuk-input govuk-!-width-two-thirds govuk-!-margin-top-2" id="email-address-person-1" name="email-address-person-1" type="text" value="{{ data['email-address-person-1'] }}">
             </div>
