--- a/app/views/international-arrivals/v1/contact-details.html
+++ b/app/views/international-arrivals/v1/contact-details.html
@@ -41,8 +41,8 @@
 
             <div class="govuk-form-group govuk-!-margin-top-5 govuk-!-margin-bottom-4">
                 <label class="govuk-label govuk-!-margin-top-3" for="mobile-phone-number">
-                    <strong style="line-height: 1.7em;">What's your mobile number?</strong><br>
-                    Mobile phone number
+                    <!-- <strong style="line-height: 1.7em;">What's your mobile number?</strong><br> -->
+                    <strong>Mobile number</strong>
                 </label>
                 <input class="govuk-input govuk-!-width-one-third govuk-!-margin-top-2" id="mobile-phone-number" name="mobile-phone-number" type="tel" value="{{ data['mobile-phone-number'] }}">
             </div>
@@ -58,8 +58,8 @@
             </span> -->
             <div class="govuk-form-group govuk-!-margin-top-6 govuk-!-margin-bottom-4">
                 <label class="govuk-label" for="email-address">
-                    <strong style="line-height: 1.7em;">What's your email address?</strong><br>
-                    Email address
+                    <!-- <strong style="line-height: 1.7em;">What's your email address?</strong><br> -->
+                    <strong>Email address</strong>
                 </label>
                 <input class="govuk-input govuk-!-width-two-thirds govuk-!-margin-top-2" id="email-address" name="email-address" type="text" value="{{ data['email-address'] }}">
             </div>
