--- a/app/views/international-arrivals/v1/index.html
+++ b/app/views/international-arrivals/v1/index.html
@@ -24,7 +24,8 @@
 
       <p class="govuk-body">
         Order and pay for coronavirus (COVID-19) tests if you’re travelling to England from amber or green list countries . You need to do this at least 2 days before you arrive in England.<br><br>
-        An amber travel package of 2 tests costs £210.<br><br>
+        Check if countries are on the <a href="https://www.gov.uk/guidance/red-amber-and-green-list-rules-for-entering-england" target="blank" class="govuk-link">red, amber or green list</a>.<br><br>
+        An amber travel package of 2 tests costs £210.<br>
         A green travel package of 1 test costs £105.
       </p>
 
@@ -32,7 +33,8 @@
       <p class="govuk-body">
         You can order tests for yourself and up to 3 other people you’re travelling with.<br><br>
         If you're coming from an amber list country, the other people need to be staying in quarantine at the same address as you.<br><br>
-        If you’ve been told that you’re exempt from payment, call 0300 222 0000.
+        If you’ve been told that you’re exempt from payment, call 0300 222 0000.<br><br>
+        If your travel plans change after booking and paying for your tests, you can change your order or get a refund.
       </p>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">What you need before you start</h2>
@@ -52,13 +54,13 @@
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Amber travel package</h2>
       <p class="govuk-body">
-        If you enter England from an amber list country, you must quarantine for 10 days at a location of your choice.<br><br>
-        You must take a coronavirus test on day 2 and day 8 (where your day of arrival is day 0).
+        Order this package if you come from or transfer through an amber list country in the 10 days before you enter England. You must quarantine after arrival for 10 days at a location of your choice.<br><br>
+        You must take a coronavirus test on day 2 and day 8 (where your day of arrival is day 0.
       </p>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Green travel package</h2>
       <p class="govuk-body">
-        If you enter England from a green list country, you do not have to quarantine.<br><br>
+        Order this package if you come from or transfer through a green list country in the 10 days before you enter England. You do not have to quarantine.<br><br>
         You must take a coronavirus test on day 2 (where your day of arrival is day 0).
       </p>
 
@@ -69,7 +71,7 @@
         
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Passenger locator form (PLF)</h2>
       <p class="govuk-body">
-        You must complete this form online before you arrive in the UK: <a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk" class="govuk-link">https://www.gov.uk/provide-journey-contact-details-before-travel-uk</a>
+        You must complete this form online within 48 hours of the start of your journey to England: <a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk" class="govuk-link">https://www.gov.uk/provide-journey-contact-details-before-travel-uk</a>
       </p>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">About the tests</h2>
