--- a/app/views/international-arrivals/v1/people-confirmed-person-1.html
+++ b/app/views/international-arrivals/v1/people-confirmed-person-1.html
@@ -26,8 +26,7 @@
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
       <p class="govuk-body">
-        You can order tests for up to 3 other people you’re travelling with.<br><br>
-        They need to be staying in quarantine at the same address as you.<br><br>
+        You can order travel packages for up to 3 other people that you're travelling with. They must be staying at the same address as you and ordering the same travel package (green or amber).<br><br>
         Once you've confirmed who needs testing, you can complete and pay for your order.
       </p>
 
