--- a/app/views/international-arrivals/v1/travel-details.html
+++ b/app/views/international-arrivals/v1/travel-details.html
@@ -40,7 +40,7 @@
 
           <div class="govuk-form-group">
             <label class="govuk-label" for="port-of-origin">
-              Country you’re departing from
+              Country you're departing from (this does not include transfers or stop-offs)
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="port-of-origin" name="port-of-origin" type="text" value="{{ data['port-of-origin'] }}">
           </div>
