--- a/app/views/international-arrivals/v1/travel-route.html
+++ b/app/views/international-arrivals/v1/travel-route.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "What travel routes are you ordering test kits for?" %}
+{% set pageTitle = "What travel package are you ordering?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -34,27 +34,30 @@
             </h1>
           </legend>
           <span id="travel-route-hint" class="govuk-body">
-            Select the highest category of countries (red, amber or green) you’ll visit in the 10 days before you arrive in England. This will help confirm that you’re ordering the correct travel package.
+            Select the highest category of country (red, amber or green) you’ll visit in the 10 days before you arrive in England. Where red is the highest and green is the lowest. This will help confirm that you’re ordering the correct travel package.<br><br>
+            Check if countries are on the <a href="https://www.gov.uk/guidance/red-amber-and-green-list-rules-for-entering-england" target="blank" class="govuk-link">red, amber or green list</a>.
           </span>
 
           <div class="govuk-radios govuk-!-margin-top-6 govuk-!-margin-bottom-6" data-module="govuk-radios">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="travel-route-1" name="travel-route" type="radio" value="red" {{ checked("travel-route", "red") }}>
               <label class="govuk-label govuk-radios__label" for="travel-route-1">
-                Red<br>
-                <a href="https://www.gov.uk/guidance/transport-measures-to-protect-the-uk-from-variant-strains-of-covid-19" target="blank" class="govuk-link">Find out which countries are on the red list</a>
+                Red
+                <!-- <a href="https://www.gov.uk/guidance/transport-measures-to-protect-the-uk-from-variant-strains-of-covid-19" target="blank" class="govuk-link">Find out which countries are on the red list</a> -->
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="travel-route-2" name="travel-route" type="radio" value="amber" {{ checked("travel-route", "amber") }}>
               <label class="govuk-label govuk-radios__label" for="travel-route-2">
                 Amber
+                <!-- <a href="#" target="blank" class="govuk-link">Find out which countries are on the amber list</a> -->
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="travel-route-3" name="travel-route" type="radio" value="green" {{ checked("travel-route", "green") }}>
               <label class="govuk-label govuk-radios__label" for="travel-route-3">
                 Green
+                <!-- <a href="#" target="blank" class="govuk-link">Find out which countries are on the green list</a> -->
               </label>
             </div>
           </div>
