--- a/app/views/international-arrivals/v1/order-summary.html
+++ b/app/views/international-arrivals/v1/order-summary.html
@@ -69,7 +69,7 @@
             Delivery address
           </dt>
           <dd class="govuk-summary-list__value">
-            {% if data['delivery-address-same'] and data['delivery-address'] !== '5 addresses found' %}
+            {% if data['delivery-address'] !== '5 addresses found' %}
               {{ data['delivery-address'] }}
             {% else %}
               {{ data['delivery-address-line-1'] or '5 Souterhead Road' }}<br>
@@ -90,13 +90,51 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Total payment
+            Type of travel package
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {% if data['travel-route'] == "green" %}
+            Green (£105 each)
+            {% else %}
+            Amber (£210 each)
+            {% endif %}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Number of packages ordered
           </dt>
           <dd class="govuk-summary-list__value">
             {% if data['first-name-person-1'] %}
-            £420.00
+            2
             {% else %}
-            £210.00
+            1
+            {% endif %}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Total payment
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {% if data['travel-route'] == "green" %}
+              {% if data['first-name-person-1'] %}
+              £210.00
+              {% else %}
+              £105.00
+              {% endif %}
+            {% else %}
+              {% if data['first-name-person-1'] %}
+              £420.00
+              {% else %}
+              £210.00
+              {% endif %}
             {% endif %}
           </dd>
           <dd class="govuk-summary-list__actions">
@@ -112,8 +150,6 @@
         </button>
 
       </form>
-
-      <p class="govuk-!-font-size-16"><a class="govuk-link" href="./payment-exemption.html">I am exempt from payment</a></p>
 
     </div>
   </div>
