--- a/app/views/international-arrivals/v1/people-confirmed.html
+++ b/app/views/international-arrivals/v1/people-confirmed.html
@@ -26,7 +26,7 @@
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
       <p class="govuk-body">
-        You can order tests for up to 3 other people you’re travelling with. They need to be staying in quarantine at the same address as you.<br><br>
+        You can order travel packages for up to 3 other people that you're travelling with. They must be staying at the same address as you and ordering the same travel package (green or amber).<br><br>
         Once you've confirmed who needs testing, you can complete and pay for your order.
       </p>
 
@@ -57,7 +57,7 @@
             Save and continue
           </button>
         </form>
-        <form class="form" action="/international-arrivals/{{version}}/travel-route-same-person-1" method="post">
+        <form class="form" action="/international-arrivals/{{version}}/personal-details-person-1" method="post">
           <button class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">
             Add another person
           </button>
