--- a/app/views/international-arrivals/v1/personal-details-person-1.html
+++ b/app/views/international-arrivals/v1/personal-details-person-1.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Personal Details" %}
+{% set pageTitle = "Personal details of the next person" %}
 
 {% extends "includes/layout.html" %}
 
@@ -14,7 +14,7 @@
       </span>
     </p>
   </div>
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/travel-route-same-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed">Back</a>
 
 
 {% endblock %}
@@ -26,7 +26,7 @@
 
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">{{ pageTitle }}</h1>
 
-      <form action="/international-arrivals/{{version}}/travel-details-same-person-1" method="post">
+      <form action="/international-arrivals/{{version}}/travel-route-same-person-1" method="post">
 
         <fieldset class="govuk-fieldset" aria-describedby="name-hint">
 
