--- a/app/views/international-arrivals/v1/travel-route-same-person-1.html
+++ b/app/views/international-arrivals/v1/travel-route-same-person-1.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Are they also purchasing a test for amber category travel?" %}
+{% set pageTitle = "Are they also ordering an amber travel package?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -37,7 +37,7 @@
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-              Is {{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Smith' }} also purchasing a test for {{ data['travel-route'] or 'amber' }} category travel?
+              Is {{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Smith' }} also ordering {% if data['travel-route'] == 'green' %}a green{% else %}an amber{% endif %} travel package?
             </h1>
           </legend>
 
